* Change: ensure photoAlbumEntryTitle doesn't spill over expired wrapper   [ichim-david refs #117295]

--- a/eea/design/skins/eeadesign_styles/scss-theme/components/_relations.scss
+++ b/eea/design/skins/eeadesign_styles/scss-theme/components/_relations.scss
@@ -41,6 +41,9 @@
   -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
  }
+ .expired .photoAlbumEntryTitle {
+    width: 93%;
+}
  .photoAlbumEntryWrapperImg {
   z-index: 0;
  }
